tests/reference/asr-structs_06-6e14537.stderr
semantic error: StructConstructor arguments are greater the number of struct members
 --> tests/errors/structs_06.py:9:12
  |
9 |     s: S = S(2, 3, 4, 5)
  |            ^^^^^^^^^^^^^ 
